force-app/main/default/objects/custom_create136__c/custom_create136__c.object-meta.xml
<CustomObject>
    <label>Custom created object136</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects136</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>