force-app/main/default/objects/custom_create136__c/fields/custom_create_136field519__c.field-meta.xml
<CustomField>
    <fullName>custom_create_136field519__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 136field519</label>
    <type>Checkbox</type>
</CustomField>